--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -244,7 +244,7 @@
 						</div>
 					</div>
 
-					<div class="keywords" style="color:#364577;">web agency atlanta, web strategy, web design, logo, website, web, internet, logo design</div>
+					<div class="keywords" style="color:#04060c;">web agency atlanta, web strategy, web design, logo, website, web, internet, logo design</div>
 
 				</div>
 					<div class="row">
