contrast color improvement and redundant link removed

--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -34,7 +34,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-					<div class="keywords" style="color:#cc927c;font: size 14px;">web agency atlanta, web strategy, web design, logo, website, web, internet, logo design</div>
+					<div class="keywords" style="color:#2e2d2d;font: size 14px;">web agency atlanta, web strategy, web design, logo, website, web, internet, logo design</div>
 				<a class="navbar-brand" href="index.html"><img src="img/atlanta%20web%20design%20logo.png" alt="logo, seo, google, website, internet, web design, design agency" height="40" /></a>
 					
 
@@ -45,7 +45,7 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="index.html">Home</a>
+						<a alt="index.html">Home</a>
 					</li>
 					<li>
 					</li>
