--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -69,7 +69,7 @@
 					I'm Mike.
 				</h1>
 				<div class="text-center">
-					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+					<a alt="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 				</div>
 			</div>
 		</div>
@@ -225,22 +225,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a aria-label="check me on twitter" class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<a aria-label="check me on twitter" class="social" alt="index.html"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a aria-label="check me on facebook" class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+							<a aria-label="check me on facebook" class="social" alt="index.html"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a aria-label="check me on dribbble" class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+							<a aria-label="check me on dribbble" class="social" alt="index.html"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a aria-label="check me on Instagram" class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+							<a aria-label="check me on Instagram" class="social" alt="index.html"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 
