--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -35,7 +35,7 @@
 		<nav class="navbar row">
 			<div class="navbar-header">
 					<div class="keywords" style="color:#2e2d2d;font: size 14px;">web agency atlanta, web strategy, web design, logo, website, web, internet, logo design</div>
-				<a class="navbar-brand" href="index.html"><img src="img/atlanta%20web%20design%20logo.png" alt="logo, seo, google, website, internet, web design, design agency" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/atlanta%20web%20design%20logo.png" href="logo, seo, google, website, internet, web design, design agency" height="40" /></a>
 					
 
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
@@ -45,7 +45,7 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a alt="index.html">Home</a>
+						<a href="/">Home</a>
 					</li>
 					<li>
 					</li>
@@ -69,7 +69,7 @@
 					I'm Mike.
 				</h1>
 				<div class="text-center">
-					<a alt="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 				</div>
 			</div>
 		</div>
@@ -138,7 +138,7 @@
 					I love Atlanta, my hometown, and want to see all Atlanta businesses succeed. I help by offering web design services that help local businesses stand out and attract new customers online.<br>
 				</h2>
 				<p class="text-center white">
-					I'm super excited you&rsquo;re here. I partner with creative entrepreneurs and local Atlanta business that are either starting or needing to renew their website to attract business. Whether you need a complete brand identity or a redesign of your website, I&rsquo;ll work with you to create something that looks great and structured to be found on Google.<br><br><a class="ltc-white bold-link" alt="page2.html">Are you ready, contact me</a><br>
+					I'm super excited you&rsquo;re here. I partner with creative entrepreneurs and local Atlanta business that are either starting or needing to renew their website to attract business. Whether you need a complete brand identity or a redesign of your website, I&rsquo;ll work with you to create something that looks great and structured to be found on Google.<br><br><a class="ltc-white bold-link" href="page2.html">Are you ready, contact me</a><br>
 				</p>
 			</div>
 		</div>
@@ -207,7 +207,7 @@
 				Ready for a great website? <br>Let&rsquo;s design!
 			</h2>
 			<div class="col-sm-12 text-center">
-				<a alt="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 			</div>
 		</div>
 	</div>
@@ -225,22 +225,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a aria-label="check me on twitter" class="social" alt="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<a aria-label="check me on twitter" class="social" href="twitter.com"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a aria-label="check me on facebook" class="social" alt="index.html"><span class="fa fa-facebook icon-md"></span></a>
+							<a aria-label="check me on facebook" class="social" href="facebook.com"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a aria-label="check me on dribbble" class="social" alt="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+							<a aria-label="check me on dribbble" class="social" href="dribbble.com"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a aria-label="check me on Instagram" class="social" alt="index.html"><span class="fa fa-instagram icon-md"></span></a>
+							<a aria-label="check me on Instagram" class="social" href="instagram.com"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 
