--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -35,7 +35,7 @@
 		<nav class="navbar row">
 			<div class="navbar-header">
 					<div class="keywords" style="color:#2e2d2d;font: size 14px;">web agency atlanta, web strategy, web design, logo, website, web, internet, logo design</div>
-				<a class="navbar-brand" href="index.html"><img src="img/atlanta%20web%20design%20logo.png" href="logo, seo, google, website, internet, web design, design agency" height="40" /></a>
+				<a aria-label="logo" class="navbar-brand" href="index.html"><img src="img/atlanta%20web%20design%20logo.png" alt="logo, seo, google, website, internet, web design, design agency" height="40" /></a>
 					
 
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
