--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="main.css.min">
+	<link rel="stylesheet" type="text/css" href="main.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -34,7 +34,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-					<div class="keywords" style="color:#2e2d2d;font: size 14px;">web agency atlanta, web strategy, web design, logo, website, web, internet, logo design</div>
+					<div class="keywords" style="color:#2e2d2d;font-size: 1px;">web agency atlanta, web strategy, web design, logo, website, web, internet, logo design</div>
 				<a aria-label="logo" class="navbar-brand" href="index.html"><img src="img/atlanta%20web%20design%20logo.png" alt="logo, seo, google, website, internet, web design, design agency" height="40" /></a>
 					
 
