sorting contrast errors

--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -65,11 +65,11 @@
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
 				<img src="img/atlanta%20web%20designer%20mike.png" class="center-block image-resize-mode" width="100" alt="atlanta web designer mike,seo, google, website, internet, web design, design agency" />
-				<h1 class="text-center hero-bloc-text tc-white ">
+				<h1 class="text-center hero-bloc-text tc-white " style="color: rgb(168, 168, 168); background-color: rgb(0, 0, 0);"></h1>>
 					I'm Mike.
 				</h1>
 				<div class="text-center">
-					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero" style="color: rgb(255, 255, 255); background-color: rgb(243, 151, 108);"> Contact</a>
 				</div>
 			</div>
 		</div>
@@ -207,7 +207,7 @@
 				Ready for a great website? <br>Let&rsquo;s design!
 			</h2>
 			<div class="col-sm-12 text-center">
-				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" style="color: #cfcfcf; background-color: #5b2106;">Contact</a>
 			</div>
 		</div>
 	</div>
@@ -244,11 +244,11 @@
 						</div>
 					</div>
 
-					<div class="keywords" style="color:#04060c;">web agency atlanta, web strategy, web design, logo, website, web, internet, logo design</div>
+					<div class="keywords" style="color: #c2c2c2; background-color: #1f2742;">web agency atlanta, web strategy, web design, logo, website, web, internet, logo design</div>
 
 				</div>
 					<div class="row">
-					<div class="col-sm-4">
+					<div class="col-sm-4" style="color: #1a1a1a;">
 						Partners
 							<ul>
 								<li><a href="car.com">car.com</a></li>
@@ -257,7 +257,7 @@
 								<li><a href="realestateseo.com">realestateseo.com</a></li>
 							</ul>		
 					</div>
-					<div class="col-sm-4">
+					<div class="col-sm-4" style="color: #1a1a1a;">
 						Directories 1
 						<ul>
 							<li><a href="agencydirectory.com">agencydirectory.com</a></li>
@@ -271,7 +271,7 @@
 							<li><a href="seolist.com">seolist.com</a></li>
 						</ul>
 					</div>
-					<div class="col-sm-4">
+					<div class="col-sm-4" style="color: #1a1a1a;">
 						Directories 2
 						<ul>
 							<li><a href="betterseo.com">betterseo.com</a></li>
