--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -65,7 +65,7 @@
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
 				<img src="img/atlanta%20web%20designer%20mike.png" class="center-block image-resize-mode" width="100" alt="atlanta web designer mike,seo, google, website, internet, web design, design agency" />
-				<h1 class="text-center hero-bloc-text tc-white " style="color: rgb(168, 168, 168); background-color: rgb(0, 0, 0);"></h1>>
+				<h1 class="text-center hero-bloc-text tc-white " style="color: rgb(168, 168, 168); background-color: rgb(0, 0, 0);">
 					I'm Mike.
 				</h1>
 				<div class="text-center">
@@ -203,7 +203,7 @@
 <div class="bloc bgc-dark-slate-blue bg-atlanta-20made-20sign d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 	<div class="container bloc-lg">
 		<div class="row">
-			<h2 class="mg-md text-center tc-white">
+			<h2 class="mg-md text-center tc-white" style="color: #c4c4c4; background-color: #080808;">
 				Ready for a great website? <br>Let&rsquo;s design!
 			</h2>
 			<div class="col-sm-12 text-center">
