--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -203,11 +203,11 @@
 <div class="bloc bgc-dark-slate-blue bg-atlanta-20made-20sign d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 	<div class="container bloc-lg">
 		<div class="row">
-			<h2 class="mg-md text-center tc-white" style="color: #c4c4c4; background-color: #080808;">
+			<h2 class="mg-md text-center tc-white" style=" background-color: #080808;">
 				Ready for a great website? <br>Let&rsquo;s design!
 			</h2>
 			<div class="col-sm-12 text-center">
-				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" style="color: #cfcfcf; background-color: #5b2106;">Contact</a>
+				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 			</div>
 		</div>
 	</div>
