--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -251,7 +251,7 @@
 					<div class="col-sm-4" style="color: #1a1a1a;">
 						Partners
 							<ul>
-								<li><a href="car.com">car.com</a></li>
+								<li><a href="car.com" style= "color: #1a1a1a;">car.com</a></li>
 								<li><a href="pizza.com">pizza.com</a></li>
 								<li><a href="myroof.com">myroof.com</a></li>
 								<li><a href="realestateseo.com">realestateseo.com</a></li>
