--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -248,41 +248,41 @@
 
 				</div>
 					<div class="row">
-					<div class="col-sm-4" style="color: #1a1a1a;">
+					<div class="col-sm-4">
 						Partners
 							<ul>
-								<li><a href="car.com" style= "color: #1a1a1a;">car.com</a></li>
-								<li><a href="pizza.com">pizza.com</a></li>
-								<li><a href="myroof.com">myroof.com</a></li>
-								<li><a href="realestateseo.com">realestateseo.com</a></li>
+								<li><a href="car.com" style="background-color: #080808">car.com</a></li>
+								<li><a href="pizza.com" style="background-color: #080808">pizza.com</a></li>
+								<li><a href="myroof.com" style="background-color: #080808">myroof.com</a></li>
+								<li><a href="realestateseo.com" style="background-color: #080808">realestateseo.com</a></li>
 							</ul>		
 					</div>
-					<div class="col-sm-4" style="color: #1a1a1a;">
+					<div class="col-sm-4">
 						Directories 1
 						<ul>
-							<li><a href="agencydirectory.com">agencydirectory.com</a></li>
-							<li><a href="seodirectory.com">seodirectory.com</a></li>
-							<li><a href="marketingdirectory.com">marketingdirectory.com</a></li>
-							<li><a href="123seo.com">123seo.com</a></li>
-							<li><a href="123site.com">123site.com</a></li>
-							<li><a href="wordpressdirectory.com">wordpressdirectory.com</a></li>
-							<li><a href="agencylistatl.com">agencylistatl.com</a></li>
-							<li><a href="bestagencyatl.com">bestagencyatl.com</a></li>
-							<li><a href="seolist.com">seolist.com</a></li>
+							<li><a href="agencydirectory.com" style="background-color: #080808">agencydirectory.com</a></li>
+							<li><a href="seodirectory.com" style="background-color: #080808">seodirectory.com</a></li>
+							<li><a href="marketingdirectory.com" style="background-color: #080808">marketingdirectory.com</a></li>
+							<li><a href="123seo.com" style="background-color: #080808">123seo.com</a></li>
+							<li><a href="123site.com" style="background-color: #080808">123site.com</a></li>
+							<li><a href="wordpressdirectory.com" style="background-color: #080808">wordpressdirectory.com</a></li>
+							<li><a href="agencylistatl.com" style="background-color: #080808">agencylistatl.com</a></li>
+							<li><a href="bestagencyatl.com" style="background-color: #080808">bestagencyatl.com</a></li>
+							<li><a href="seolist.com" style="background-color: #080808">seolist.com</a></li>
 						</ul>
 					</div>
-					<div class="col-sm-4" style="color: #1a1a1a;">
+					<div class="col-sm-4">
 						Directories 2
 						<ul>
-							<li><a href="betterseo.com">betterseo.com</a></li>
-							<li><a href="yesseo.com">yesseo.com</a></li>
-							<li><a href="seojuicelink.com">seojuicelink.com</a></li>
-							<li><a href="bestlinks.com">bestlinks.com</a></li>
-							<li><a href="linkalot.com">linkalot.com</a></li>
-							<li><a href="backlink.com">backlink.com</a></li>
-							<li><a href="linkjuicedirectory.com">linkjuicedirectory.com</a></li>
-							<li><a href="rankongoogle.com">rankongoogle.com</a></li>
-							<li><a href="trustedseo.com">trustedseo.com</a></li>
+							<li><a href="betterseo.com" style="background-color: #080808">betterseo.com</a></li>
+							<li><a href="yesseo.com" style="background-color: #080808">yesseo.com</a></li>
+							<li><a href="seojuicelink.com" style="background-color: #080808">seojuicelink.com</a></li>
+							<li><a href="bestlinks.com" style="background-color: #080808">bestlinks.com</a></li>
+							<li><a href="linkalot.com" style="background-color: #080808">linkalot.com</a></li>
+							<li><a href="backlink.com" style="background-color: #080808">backlink.com</a></li>
+							<li><a href="linkjuicedirectory.com" style="background-color: #080808">linkjuicedirectory.com</a></li>
+							<li><a href="rankongoogle.com" style="background-color: #080808">rankongoogle.com</a></li>
+							<li><a href="trustedseo.com" style="background-color: #080808">trustedseo.com</a></li>
 						</ul>
 					</div>
 				</div>
