--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -251,38 +251,38 @@
 					<div class="col-sm-4">
 						Partners
 							<ul>
-								<li><a href="car.com" style="background-color: #00183d">car.com</a></li>
-								<li><a href="pizza.com" style="background-color: #00183d">pizza.com</a></li>
-								<li><a href="myroof.com" style="background-color: #00183d">myroof.com</a></li>
-								<li><a href="realestateseo.com" style="background-color: #00183d">realestateseo.com</a></li>
+								<li><a href="car.com" style="background-color: #0208be">car.com</a></li>
+								<li><a href="pizza.com" style="background-color: #0208be">pizza.com</a></li>
+								<li><a href="myroof.com" style="background-color: #0208be">myroof.com</a></li>
+								<li><a href="realestateseo.com" style="background-color: #0208be">realestateseo.com</a></li>
 							</ul>		
 					</div>
 					<div class="col-sm-4">
 						Directories 1
 						<ul>
-							<li><a href="agencydirectory.com" style="background-color: #00183d">agencydirectory.com</a></li>
-							<li><a href="seodirectory.com" style="background-color: #00183d">seodirectory.com</a></li>
-							<li><a href="marketingdirectory.com" style="background-color: #00183d">marketingdirectory.com</a></li>
-							<li><a href="123seo.com" style="background-color: #00183d">123seo.com</a></li>
-							<li><a href="123site.com" style="background-color: #00183d">123site.com</a></li>
-							<li><a href="wordpressdirectory.com" style="background-color: #00183d">wordpressdirectory.com</a></li>
-							<li><a href="agencylistatl.com" style="background-color: #00183d">agencylistatl.com</a></li>
-							<li><a href="bestagencyatl.com" style="background-color: #00183d">bestagencyatl.com</a></li>
-							<li><a href="seolist.com" style="background-color: #00183d">seolist.com</a></li>
+							<li><a href="agencydirectory.com" style="background-color: #0208be">agencydirectory.com</a></li>
+							<li><a href="seodirectory.com" style="background-color: #0208be">seodirectory.com</a></li>
+							<li><a href="marketingdirectory.com" style="background-color: #0208be">marketingdirectory.com</a></li>
+							<li><a href="123seo.com" style="background-color: #0208be">123seo.com</a></li>
+							<li><a href="123site.com" style="background-color: #0208be">123site.com</a></li>
+							<li><a href="wordpressdirectory.com" style="background-color: #0208be">wordpressdirectory.com</a></li>
+							<li><a href="agencylistatl.com" style="background-color: #0208be">agencylistatl.com</a></li>
+							<li><a href="bestagencyatl.com" style="background-color: #0208be">bestagencyatl.com</a></li>
+							<li><a href="seolist.com" style="background-color: #0208be">seolist.com</a></li>
 						</ul>
 					</div>
 					<div class="col-sm-4">
 						Directories 2
 						<ul>
-							<li><a href="betterseo.com" style="background-color: #00183d">betterseo.com</a></li>
-							<li><a href="yesseo.com" style="background-color: #00183d">yesseo.com</a></li>
-							<li><a href="seojuicelink.com" style="background-color: #00183d">seojuicelink.com</a></li>
-							<li><a href="bestlinks.com" style="background-color: #00183d">bestlinks.com</a></li>
-							<li><a href="linkalot.com" style="background-color: #00183d">linkalot.com</a></li>
-							<li><a href="backlink.com" style="background-color: #00183d">backlink.com</a></li>
-							<li><a href="linkjuicedirectory.com" style="background-color: #00183d">linkjuicedirectory.com</a></li>
-							<li><a href="rankongoogle.com" style="background-color: #00183d">rankongoogle.com</a></li>
-							<li><a href="trustedseo.com" style="background-color: #00183d">trustedseo.com</a></li>
+							<li><a href="betterseo.com" style="background-color: #0208be">betterseo.com</a></li>
+							<li><a href="yesseo.com" style="background-color: #0208be">yesseo.com</a></li>
+							<li><a href="seojuicelink.com" style="background-color: #0208be">seojuicelink.com</a></li>
+							<li><a href="bestlinks.com" style="background-color: #0208be">bestlinks.com</a></li>
+							<li><a href="linkalot.com" style="background-color: #0208be">linkalot.com</a></li>
+							<li><a href="backlink.com" style="background-color: #0208be">backlink.com</a></li>
+							<li><a href="linkjuicedirectory.com" style="background-color: #0208be">linkjuicedirectory.com</a></li>
+							<li><a href="rankongoogle.com" style="background-color: #0208be">rankongoogle.com</a></li>
+							<li><a href="trustedseo.com" style="background-color: #0208be">trustedseo.com</a></li>
 						</ul>
 					</div>
 				</div>
