--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -34,7 +34,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-					<div class="keywords" style="color:#2e2d2d;font-size: 1px;">web agency atlanta, web strategy, web design, logo, website, web, internet, logo design</div>
+					<div class="keywords" style="color:#2e2d2d;"></div>
 				<a aria-label="logo" class="navbar-brand" href="index.html"><img src="img/atlanta%20web%20design%20logo.png" alt="logo, seo, google, website, internet, web design, design agency" height="40" /></a>
 					
 
@@ -65,11 +65,11 @@
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
 				<img src="img/atlanta%20web%20designer%20mike.png" class="center-block image-resize-mode" width="100" alt="atlanta web designer mike,seo, google, website, internet, web design, design agency" />
-				<h1 class="text-center hero-bloc-text tc-white " style="color: rgb(168, 168, 168); background-color: #1c1c1c;">
+				<h1 class="text-center hero-bloc-text tc-white " style="color: #c1c7e2; background-color: #1c1c1c;">
 					I'm Mike.
 				</h1>
 				<div class="text-center">
-					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero" style="color: rgb(255, 255, 255); background-color: rgb(243, 151, 108);"> Contact</a>
+					<a href="page2.html" aria-label="go to page2" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero" style="color: rgb(255, 255, 255); background-color: #1f1f1f;"> Contact</a>
 				</div>
 			</div>
 		</div>
@@ -138,7 +138,7 @@
 					I love Atlanta, my hometown, and want to see all Atlanta businesses succeed. I help by offering web design services that help local businesses stand out and attract new customers online.<br>
 				</h2>
 				<p class="text-center white">
-					I'm super excited you&rsquo;re here. I partner with creative entrepreneurs and local Atlanta business that are either starting or needing to renew their website to attract business. Whether you need a complete brand identity or a redesign of your website, I&rsquo;ll work with you to create something that looks great and structured to be found on Google.<br><br><a class="ltc-white bold-link" href="page2.html">Are you ready, contact me</a><br>
+					I'm super excited you&rsquo;re here. I partner with creative entrepreneurs and local Atlanta business that are either starting or needing to renew their website to attract business. Whether you need a complete brand identity or a redesign of your website, I&rsquo;ll work with you to create something that looks great and structured to be found on Google.<br><br><a class="ltc-white bold-link" href="page2.html"aria-label="go to page2">Are you ready, contact me</a><br>
 				</p>
 			</div>
 		</div>
@@ -207,7 +207,7 @@
 				Ready for a great website? <br>Let&rsquo;s design!
 			</h2>
 			<div class="col-sm-12 text-center">
-				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" style="background-color: #1c1c1c;">Contact</a>
+				<a href="page2.html"aria-label="go to page2" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" style="background-color: #1c1c1c;">Contact</a>
 			</div>
 		</div>
 	</div>
