--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -207,7 +207,7 @@
 				Ready for a great website? <br>Let&rsquo;s design!
 			</h2>
 			<div class="col-sm-12 text-center">
-				<a href="page2.html"aria-label="go to page2" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" style="background-color: #1c1c1c;">Contact</a>
+				<a aria-label="go to page2" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" style="background-color: #1c1c1c;">Contact</a>
 			</div>
 		</div>
 	</div>
