--- a/P4-Project-Updates/page2.html
+++ b/P4-Project-Updates/page2.html
@@ -43,10 +43,10 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="index.html">Home</a>
+						<a href="#">Home</a>
 					</li>
-					<li>
-					</li>
+					
+					
 					<li>
 						<a href="">page2</a>
 					</li>
@@ -62,10 +62,10 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12">
-				<h2 class="text-center hero-bloc-text tc-white" style="color: #edeff7;">
+				<h1 class="text-center hero-bloc-text tc-white" style="color: #f1f3f9; background-color: 1b243c;">
 					Let&rsquo;s talk web design!
-				</h2>
-				<p class="text-center mg-lg tc-white tight-width-whitespace" style="color: #ffffff">
+				</h1>
+				<p class="text-center mg-lg tc-white tight-width-whitespace" style="color: #f1f3f9; background-color: 1b243c;">
 					I&rsquo;m super excited that you want to work together.<br>Please fill in the form below or get in touch so I can learn about your project <br>and we can setup time to &nbsp;talk websites and Atlanta city love.
 				</p>
 			</div>
@@ -110,7 +110,7 @@
 			</div>
 			<div class="col-sm-6">
 				<p>
-					mike@gomikedesigns.com<br>+1 (404) 555-1234<br> <br>123 Peachtree Ave. Atlanta, GA<br>Available 9am–5pm, Mon-Fri <br> <br>Interested to learn about my freelace services? <br>Please visit my&nbsp;<a class="ltc-atomic-tangerine" href="index.html" style="color: #8a320a;">other page</a>.
+					mike@gomikedesigns.com<br>+1 (404) 555-1234<br> <br>123 Peachtree Ave. Atlanta, GA<br>Available 9am–5pm, Mon-Fri <br> <br>Interested to learn about my freelace services? <br>Please visit my&nbsp;<a class="ltc-atomic-tangerine" href="index.html" style="color: #1a1a1a;">other page</a>.
 				</p>
 			</div>
 		</div>
