more contrast errors

--- a/P4-Project-Updates/page2.html
+++ b/P4-Project-Updates/page2.html
@@ -58,11 +58,11 @@
 <!-- bloc-0 END -->
 
 <!-- bloc-6 -->
-<div class="bloc bg-dots-bg bg-repeat bgc-dark-slate-blue d-bloc bloc-bg-texture texture-paper" id="bloc-6">
+<div class="bloc bg-dots-bg bg-repeat bgc-dark-slate-blue d-bloc bloc-bg-texture texture-paper" id="bloc-6" style="background-color: #101723;">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12">
-				<h1 class="text-center hero-bloc-text tc-white" style="color: #f1f3f9; background-color: 1b243c;">
+				<h1 class="text-center hero-bloc-text tc-white">
 					Let&rsquo;s talk web design!
 				</h1>
 				<p class="text-center mg-lg tc-white tight-width-whitespace" style="color: #f1f3f9; background-color: 1b243c;">
@@ -110,7 +110,7 @@
 			</div>
 			<div class="col-sm-6">
 				<p>
-					mike@gomikedesigns.com<br>+1 (404) 555-1234<br> <br>123 Peachtree Ave. Atlanta, GA<br>Available 9am–5pm, Mon-Fri <br> <br>Interested to learn about my freelace services? <br>Please visit my&nbsp;<a class="ltc-atomic-tangerine" href="index.html" style="color: #1a1a1a;">other page</a>.
+					mike@gomikedesigns.com<br>+1 (404) 555-1234<br> <br>123 Peachtree Ave. Atlanta, GA<br>Available 9am–5pm, Mon-Fri <br> <br>Interested to learn about my freelace services? <br>Please visit my&nbsp;<a class="ltc-atomic-tangerine" href="index.html" style="color: #3b3b3b;">other page</a>.
 				</p>
 			</div>
 		</div>
