--- a/P4-Project-Updates/page2.html
+++ b/P4-Project-Updates/page2.html
@@ -62,10 +62,10 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12">
-				<h1 class="text-center hero-bloc-text tc-white">
+				<h1 class="text-center hero-bloc-text tc-white" style="color: #ffffff;">
 					Let&rsquo;s talk web design!
 				</h1>
-				<p class="text-center mg-lg tc-white tight-width-whitespace" style="color: #f1f3f9; background-color: 1b243c;">
+				<p class="text-center mg-lg tc-white tight-width-whitespace" style="color: #ffffff;">
 					I&rsquo;m super excited that you want to work together.<br>Please fill in the form below or get in touch so I can learn about your project <br>and we can setup time to &nbsp;talk websites and Atlanta city love.
 				</p>
 			</div>
