--- a/P4-Project-Updates/page2.html
+++ b/P4-Project-Updates/page2.html
@@ -58,14 +58,14 @@
 <!-- bloc-0 END -->
 
 <!-- bloc-6 -->
-<div class="bloc bg-dots-bg bg-repeat bgc-dark-slate-blue d-bloc bloc-bg-texture texture-paper" id="bloc-6" style="background-color: #000000;">
+<div class="bloc bg-dots-bg bg-repeat bgc-dark-slate-blue d-bloc bloc-bg-texture texture-paper" id="bloc-6" style="background-color: #ededed;">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12">
-				<h1 class="text-center hero-bloc-text tc-white" style="color: #ffffff;">
+				<h1 class="text-center hero-bloc-text tc-white">
 					Let&rsquo;s talk web design!
 				</h1>
-				<p class="text-center mg-lg tc-white tight-width-whitespace" style="color: #ffffff;">
+				<p class="text-center mg-lg tc-white tight-width-whitespace">
 					I&rsquo;m super excited that you want to work together.<br>Please fill in the form below or get in touch so I can learn about your project <br>and we can setup time to &nbsp;talk websites and Atlanta city love.
 				</p>
 			</div>
@@ -75,7 +75,7 @@
 <!-- bloc-6 END -->
 
 <!-- bloc-7 -->
-<div class="bloc bgc-white l-bloc" id="bloc-7">
+<div class="bloc bgc-white l-bloc" id="bloc-7" style="background-color:#95d1fffd;">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
@@ -110,7 +110,7 @@
 			</div>
 			<div class="col-sm-6">
 				<p>
-					mike@gomikedesigns.com<br>+1 (404) 555-1234<br> <br>123 Peachtree Ave. Atlanta, GA<br>Available 9am–5pm, Mon-Fri <br> <br>Interested to learn about my freelace services? <br>Please visit my&nbsp;<a class="ltc-atomic-tangerine" href="index.html" style="color: #000000;">other page</a>.
+					mike@gomikedesigns.com<br>+1 (404) 555-1234<br> <br>123 Peachtree Ave. Atlanta, GA<br>Available 9am–5pm, Mon-Fri <br> <br>Interested to learn about my freelace services? <br>Please visit my&nbsp;<a class="ltc-atomic-tangerine" href="index.html" style="color: #0000;">other page</a>.
 				</p>
 			</div>
 		</div>
