--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -215,7 +215,7 @@
 <!-- bloc-5-cta END -->
 
 <!-- Footer - bloc-8 -->
-<div class="bloc bgc-dark-slate-blue d-bloc" id="bloc-8" style="background-color: cadetblue;">
+<div class="bloc bgc-dark-slate-blue d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
@@ -251,7 +251,7 @@
 					<div class="col-sm-4">
 						Partners
 							<ul>
-								<li><a href="car.com">car.com</a></li>
+								<li><a href="car.com" style="background-color: #ffffff;">car.com</a></li>
 								<li><a href="pizza.com" style="background-color: #ffffff">pizza.com</a></li>
 								<li><a href="myroof.com" style="background-color: #ffffff">myroof.com</a></li>
 								<li><a href="realestateseo.com" style="background-color: #ffffff">realestateseo.com</a></li>
