--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -69,7 +69,7 @@
 					I'm Mike.
 				</h1>
 				<div class="text-center">
-					<a aria-label="go to page2" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero" style="color: rgb(255, 255, 255); background-color: #1c1c1c;"> Contact</a>
+					<a href ="go to page2" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero" style="color: rgb(255, 255, 255); background-color: #1c1c1c;"> Contact</a>
 				</div>
 			</div>
 		</div>
@@ -207,7 +207,7 @@
 				Ready for a great website? <br>Let&rsquo;s design!
 			</h2>
 			<div class="col-sm-12 text-center">
-				<a aria-label="go to page2" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" style="background-color: #1c1c1c;">Contact</a>
+				<a href ="go to page2" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" style="background-color: #1c1c1c;">Contact</a>
 			</div>
 		</div>
 	</div>
