--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -17,7 +17,7 @@
 	<script src="./js/jquery.touchSwipe.js"></script>
 	<script src="./js/gmaps.js"></script>
 	<script src="lazysizes.min.js async"></script>
-	<link rel="preload" as="style" href="main.min.css">
+	<link rel="preload" as="style" href="css/style.css">
 
     <title>.</title>
 
