long alt text deleted

--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -159,7 +159,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/Dog.jpg" data-gallery-id="gallery-1" data-caption="Website for Atlanta's Premiere dog salon" data-frame="snapshot-lb"><img data-src="img/Dog.jpg" class="lazyload" alt="seo, google, website, internet, web design, design agency website for dog salon"/></a>
+				<a href="#" data-lightbox="img/Dog.jpg" data-gallery-id="gallery-1" data-caption="Website for Atlanta's Premiere dog salon" data-frame="snapshot-lb"><img data-src="img/Dog.jpg" class="lazyload" alt="design agency website for dog salon"/></a>
 				<h3 class="mg-md text-center">
 					Website for Atlanta&rsquo;s premiere Dog Sitters
 				</h3>
@@ -168,7 +168,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/cupcakes.jpg" data-gallery-id="gallery-1" data-caption="web redesign for the best cupcakes in Atlanta" data-frame="snapshot-lb"><img data-src="img/cupcakes.jpg" class="lazyload" alt="seo, google, website, internet, web design, design agency website for best cupcakes in atlanta"/></a>
+				<a href="#" data-lightbox="img/cupcakes.jpg" data-gallery-id="gallery-1" data-caption="web redesign for the best cupcakes in Atlanta" data-frame="snapshot-lb"><img data-src="img/cupcakes.jpg" class="lazyload" alt="design agency website for best cupcakes in atlanta"/></a>
 				<h3 class="mg-md text-center">
 					Web redesign for the best Atlanta&nbsp;cupcakes
 				</h3>
