--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -159,7 +159,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/Dog.jpg" data-gallery-id="gallery-1" data-caption="Website for Atlanta's Premiere dog salon" data-frame="snapshot-lb"><img data-src="img/Dog.jpg" class="lazyload" alt="design agency website for dog salon"/></a>
+				<a href="#" data-lightbox="img/Dog.jpg" data-gallery-id="gallery-1" data-caption="Website for Atlanta's Premiere dog salon" data-frame="snapshot-lb"><img src="img/Dog.jpg" class="image-responsive portfolio-thumb" alt="design agency website for dog salon"/></a>
 				<h3 class="mg-md text-center">
 					Website for Atlanta&rsquo;s premiere Dog Sitters
 				</h3>
@@ -168,7 +168,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/cupcakes.jpg" data-gallery-id="gallery-1" data-caption="web redesign for the best cupcakes in Atlanta" data-frame="snapshot-lb"><img data-src="img/cupcakes.jpg" class="lazyload" alt="design agency website for best cupcakes in atlanta"/></a>
+				<a href="#" data-lightbox="img/cupcakes.jpg" data-gallery-id="gallery-1" data-caption="web redesign for the best cupcakes in Atlanta" data-frame="snapshot-lb"><img src="img/cupcakes.jpg" class="image-responsive portfolio-thumb" alt="design agency website for best cupcakes in atlanta"/></a>
 				<h3 class="mg-md text-center">
 					Web redesign for the best Atlanta&nbsp;cupcakes
 				</h3>
@@ -179,7 +179,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/gadgets.jpg" data-gallery-id="gallery-1" data-caption="New logo and website for Atlanta's best tech gear shop" data-frame="snapshot-lb"><img data-src="img/gadgets.jpg" class="lazyload" alt="best tech shop in Atlanta" /></a>
+				<a href="#" data-lightbox="img/gadgets.jpg" data-gallery-id="gallery-1" data-caption="New logo and website for Atlanta's best tech gear shop" data-frame="snapshot-lb"><img src="img/gadgets.jpg" class="image-responsive portfolio-thumb" alt="best tech shop in Atlanta" /></a>
 				<h3 class="mg-md text-center">
 					New logo and website for Atl + Gear - Atlanta&rsquo;s best tech gear shop
 				</h3>
@@ -188,7 +188,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/security.jpg" data-gallery-id="gallery-1" data-caption="Atlanta's legal website generates 30% more clients after web redesign" data-frame="snapshot-lb"><img data-src="img/security.jpg" class="lazyload" alt=" Atlanta's legal website redesign" /></a>
+				<a href="#" data-lightbox="img/security.jpg" data-gallery-id="gallery-1" data-caption="Atlanta's legal website generates 30% more clients after web redesign" data-frame="snapshot-lb"><img src="img/security.jpg" class="image-responsive portfolio-thumb" alt=" Atlanta's legal website redesign" /></a>
 				<h3 class="mg-md text-center">
 					Atlanta&rsquo;s legal new website - Generating 30% more law clients with a refresh&nbsp;
 				</h3>
