--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -37,7 +37,7 @@
 		<nav class="navbar row">
 			<div class="navbar-header">
 					<div class="keywords" style="color:#2e2d2d;"></div>
-				<a aria-label="logo" class="navbar-brand" href="index.html"><img src="img/atlanta%20web%20design%20logo.png" alt="logo, seo, google, website, internet, web design, design agency" height="40" /></a>
+				<a aria-label="logo" class="navbar-brand" href="index.html"><img src="img/gomike-logo.jpg" alt="logo, seo, google, website, internet, web design, design agency" height="40" /></a>
 					
 
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
