--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="GoMike Designs, Freelance Web Designer, website development Atlanta,  need a freelance web designer Atlanta, web design near me">
-    <meta name="description" content="Do you need your website designed or revamped? Check out Mike, he is a great freelance web designer based in Atlanta">
+    <meta name="keywords" content="seo, google, website, internet, web design, design agency, design agency, design agency, design agency, design agency, design agency, logo design atlanta">
+    <meta name="description" content="I'm Mike and your should hire me to build your website">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -37,7 +37,7 @@
 		<nav class="navbar row">
 			<div class="navbar-header">
 					<div class="keywords" style="color:#2e2d2d;"></div>
-				<a aria-label="logo" class="navbar-brand" href="index.html"><img src="img/atlanta-web-design-logo-min.png" alt="logo, seo, google, website, internet, web design, design agency" height="40" /></a>
+				<a aria-label="logo" class="navbar-brand" href="index.html"><img src="img/atlanta-web-design-logo-min.p" alt="logo, seo, google, website, internet, web design, design agency" height="40" /></a>
 					
 
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
