--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="keywords" content="seo, google, website, internet, web design, design agency, design agency, design agency, design agency, design agency, design agency, logo design atlanta">
     <meta name="description" content="I'm Mike and your should hire me to build your website">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	<meta name="google-site-verification" content="Uph5oTaq0DgMxDJqTie_xdbIF41NVNai_lGo8MIN35Y" />
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
@@ -19,7 +20,7 @@
 	
 	
 
-    <title>.</title>
+    <title>GoMike Designs | Freelance Web Designer in Atlanta</title>
 
     
 <!-- Analytics -->
