--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, website, internet, web design, design agency, design agency, design agency, design agency, design agency, design agency, logo design atlanta">
-    <meta name="description" content="I'm Mike and your should hire me to build your website">
+    <meta name="keywords" content="GoMike Designs, Freelance Web Designer, website development Atlanta,  need a freelance web designer Atlanta, web design near me">
+    <meta name="description" content=="Do you need your website designed or revamped? Check out Mike, he is a great freelance web designer based in Atlanta">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
