--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="GoMike Designs, Freelance Web Designer, website development Atlanta,  need a freelance web designer Atlanta, web design near me">
-    <meta name="description" content=="Do you need your website designed or revamped? Check out Mike, he is a great freelance web designer based in Atlanta">
+    <meta name="keywords" content="seo, google, website, internet, web design, design agency, design agency, design agency, design agency, design agency, design agency, logo design atlanta">
+    <meta name="description" content="I'm Mike and your should hire me to build your website">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -71,7 +71,7 @@
 					I'm Mike.
 				</h1>
 				<div class="text-center">
-					<a href ="go to page2" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero" style="color: rgb(255, 255, 255); background-color: #1c1c1c;"> Contact</a>
+					<a href ="page2" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero" style="color: rgb(255, 255, 255); background-color: #1c1c1c;"> Contact</a>
 				</div>
 			</div>
 		</div>
@@ -140,7 +140,7 @@
 					I love Atlanta, my hometown, and want to see all Atlanta businesses succeed. I help by offering web design services that help local businesses stand out and attract new customers online.<br>
 				</h2>
 				<p class="text-center white">
-					I'm super excited you&rsquo;re here. I partner with creative entrepreneurs and local Atlanta business that are either starting or needing to renew their website to attract business. Whether you need a complete brand identity or a redesign of your website, I&rsquo;ll work with you to create something that looks great and structured to be found on Google.<br><br><a class="ltc-white bold-link" href ="go to page2">Are you ready, contact me</a><br>
+					I'm super excited you&rsquo;re here. I partner with creative entrepreneurs and local Atlanta business that are either starting or needing to renew their website to attract business. Whether you need a complete brand identity or a redesign of your website, I&rsquo;ll work with you to create something that looks great and structured to be found on Google.<br><br><a class="ltc-white bold-link" href ="page2">Are you ready, contact me</a><br>
 				</p>
 			</div>
 		</div>
@@ -209,7 +209,7 @@
 				Ready for a great website? <br>Let&rsquo;s design!
 			</h2>
 			<div class="col-sm-12 text-center">
-				<a href ="go to page2" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" style="background-color: #1c1c1c;">Contact</a>
+				<a href ="page2" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" style="background-color: #1c1c1c;">Contact</a>
 			</div>
 		</div>
 	</div>
