page html errors

--- a/P4-Project-Updates/page2.html
+++ b/P4-Project-Updates/page2.html
@@ -79,7 +79,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
-				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+				<form id="form_1" novalidate success-message="Your message has been sent." fail-message="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 					<div class="form-group">
 						<label for= "name">
 							Name
@@ -139,7 +139,7 @@
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a aria aria-label="check me on facebook" class="social" href="www.facebook.com"><span class="fa fa-facebook icon-md"></span></a>
+							<a aria-label="check me on facebook" class="social" href="www.facebook.com"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
